@@ -1,11 +1,6 @@
-
-use APR;
 use APR::Table;
 use APR::Bucket;
 use APR::Brigade;
-
-package Apache::Upload::Table;
-push our(@ISA), 'APR::Table';
 
 package Apache::Request::Table;
 push our(@ISA), 'APR::Table';
