@@ -1,0 +1,6 @@
+use APR::Table;
+use APR::Bucket;
+use APR::Brigade;
+
+package Apache::Upload::Table;
+push our(@ISA), 'APR::Table';
